Java 17 code improvements